<resources>
    <string name="app_name">Axpress Logistic App</string>
    <string name="registrationPage">Registration</string>
    <string name="loginPage">Login</string>
    <string name="forget_password_text_btn">Forget Password ?</string>
    <string name="password">Password</string>
    <string name="employee_id">Employee ID</string>
    <string name="employee_name">Name</string>
    <string name="gender">Gender</string>
    <string name="branch">Branch</string>
    <string name="designation">Designation</string>
    <string name="email_id">Email ID.</string>
    <string name="contact_no">Contact No.</string>
    <string name="submit_btn">Submit</string>
    <string name="login_btn">Login</string>
    <string name="confirm_password">Confrim Password</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_main_home">MainHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="operations">Operations</string>
    <string name="searchbytype">Search by Type</string>
    <string name="searchbtn">Search</string>
    <string name="docket_enquiry">Docket/Invoice Enquiry</string>
    <string name="hrms">HRMS</string>
    <string name="attendence_record">Attendence Record</string>
    <string name="date_time">Date</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="table_layout_4_dates">Dates</string>
    <string name="table_layout_4_open_in">In</string>
    <string name="table_layout_4_out">Out</string>
    <string name="table_layout_4_save_remark">Remark</string>
    <string name="table_layout_4_status">Status</string>
    <string name="attendance_summary">Attendance Summary</string>
    <string name="searchbyname_id">Search By Name / Emp. ID</string>
    <string name="name_id">Name / Employee ID</string>
    <string name="employee_not_found">Employee not found!!</string>
    <string name="department">Department</string>
    <string name="branch_location">Gurgaon</string>
    <string name="leave_info">Leave Info.</string>
    <string name="blank_field_error">Enter the correct input!!</string>
    <string name="or">or</string>
    <string name="vehical_enquiry">Vehicale Tracking</string>
    <string name="add_customer">Add Customer</string>
    <string name="qrcode">QR Code Scanning</string>
    <string name="forgetpassword">Forget Password</string>
    <string name="editprofile">Profile</string>
    <string name="reset_string">Please enter your registered Email ID and Employee ID beloew.</string>
    <string name="back">BACK</string>
    <string name="submit">SUBMIT</string>
    <string name="consignee">Consignee</string>
    <string name="docket_date">Docket Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="status">Status</string>
    <string name="docket_noID">Docket No</string>
    <string name="challen_noID">Challen No</string>
    <string name="challen_date">Challen Date</string>
    <string name="vehical_no">Vehicle No</string>
    <string name="challan_details">Challan/TCS Details</string>
    <string name="dwb_details">DWB Details</string>
    <string name="docket_tracking">Docket Tracking</string>
    <string name="docket">Docket</string>
    <string name="invoice">Invoice</string>
    <string name="from_to">From / To</string>
    <string name="drs_details">Delivery Information</string>
    <string name="drs_challan_noID">DRS/ Challan No</string>
    <string name="date">Date</string>
    <string name="receving">Receiving Date</string>
    <string name="received_byId">Received By</string>
    <string name="show_more">Show More</string>
    <string name="mapview">View Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="dateofbirth">Date of birth (YYYY/MM/DD)</string>
    <string name="google_maps_key">AIzaSyDnk7FNG5b6CKuA9hh3pWsD0PcOn4YKykY</string>
    <string name="google_maps_keyReleased">AIzaSyBj9ZEu9lGRnQqVHcXhwFkPiz-Ua7nBfQw</string>
    <string name="Businesscard">Business Card Details</string>
    <string name="job_title">Job Title</string>
    <string name="company">Company</string>
    <string name="mobile">Mobile</string>
    <string name="telcom">Telephone</string>
    <string name="website">Website</string>
    <string name="fax">Fax No.</string>
    <string name="scancard_view">Business card</string>
    <string name="front_view">Front Card</string>
    <string name="back_view">Back Card</string>
    <string name="barcode">Barcode</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_gallery">Gallery</string>
    <string name="preview_description">Image preview</string>
    <string name="btn_save">Save</string>
    <string name="address">Address</string>
    <string name="customer_visit">Customer Visit</string>
    <string name="visit_date">Visit Date</string>
    <string name="visit_for">Visit For</string>
    <string name="visit_type">Visit Type</string>
    <string name="status_details">Status Info.</string>
    <string name="scope">Scope</string>
    <string name="remark">Remark</string>
    <string name="other_employee_name">Other Employee name</string>
    <string name="product">Product</string>
    <string name="add_card">Add Card</string>
    <string name="add_new_card">Add New Card</string>
    <string name="add_exist_card">Add Exist Card</string>
    <string name="contact_person">Contact Person</string>
    <string name="previous_month">Previous month</string>
    <string name="next_month">Next month</string>
    <string name="visit_for_prompt">Select</string>
    <string-array name="visit_for_arrays">
        <item>Select</item>
        <item>New Business</item>
        <item>Business Follow Operation</item>
        <item>Bill Submission</item>
        <item>Payment Collection</item>
    </string-array>
    <string name="visit_type_prompt">Select</string>
    <string-array name="visit_type_arrays">
        <item>Select</item>
        <item>Physical Visit</item>
        <item>By Phone</item>
        <item>By Email</item>
    </string-array>
    <string name="Scope_prompt">Select</string>
    <string-array name="scope_arrays">
        <item>Select</item>
        <item>Air</item>
        <item>Cargo</item>
        <item>Road</item>
    </string-array>
    <string name="Status_prompt">Select</string>
    <string name="Camera">Camera</string>
    <string name="scan_qrcode">Scan QRCode</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="my_bcard">My Card</string>
    <string name="scan_new_card">Scan New Card</string>
    <string name="no_data_available">No Data Available</string>
    <string name="unique_compId">com2343545</string>
    <string name="days">Days</string>
    <string name="leave_reason_edt">Reason</string>
    <string name="Leave_type">Leave type</string>
    <string-array name="status_arrays">
        <item>Select</item>
        <item>In Process</item>
        <item>Converted</item>
        <item>Drop</item>
        <item>Close</item>
    </string-array>
    <string name="Leave_prompt">Select</string>
    <string-array name="leave_arrays">
        <item>Select</item>
        <item>Earned Leave</item>
        <item>On Duty</item>
        <item>Compensatory Off</item>
    </string-array>
    <string name="requirement_points_prompt">Select</string>
    <string-array name="requirement_points_arrays">
        <item>Select</item>
        <item>FTL</item>
        <item>PTL</item>
    </string-array>
    <string name="touching_points_prompt">Select</string>
    <string-array name="touching_points_arrays">
        <item>Select</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="goods_type_prompt">Select</string>
    <string-array name="goods_type_arrays">
        <item>Select</item>
        <item>Light Weight</item>
        <item>Heavy Weight</item>
    </string-array>
    <string name="vehicle_type_prompt">Select</string>
    <string-array name="vehicle_type_arrays">
        <item>Select</item>
        <item>500-Volvo</item>
        <item>800-Eco</item>
        <item>3000-PICK UP</item>
        <item>800-TATA ACE</item>
        <item>1800-TATA 407</item>
        <item>3500-14 FEET(open)</item>
        <item>5000-17 FEET(open)</item>
        <item>7500-19 FEET(open)</item>
        <item>7000-20 FEET(close)</item>
        <item>15000-22 FEET(open)</item>
        <item>7000-22 FEET(close)</item>
        <item>20000-24 FEET(open)</item>
        <item>8200-24 FEET(close)</item>
        <item>7000-32 FEET SXL(close)</item>
        <item>15000-32 FEET MXL(close)</item>
        <item>8000-JCB 28 FEET</item>
        <item>20000-Platform Trailor 40 FEET</item>
    </string-array>
    <string name="title_activity_business_card">BusinessCard</string>
    <string name="approve_leave">Approve Leave</string>
    <string name="add_broker">Broker Details</string>
    <string name="broker_list">Broker List</string>
    <string name="broker_name">Broker Name</string>
    <string name="broker_id">Broker Id</string>
    <string name="alternate_contact_no">Alternate Contact No</string>
    <string name="bank_account_no">Account No.</string>
    <string name="bank_name">Bank Name</string>
    <string name="pan_no">PAN No.</string>
    <string name="name_on_pancard">Name on PAN Card</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="created_by">Created By</string>
    <string name="created_on">Created On</string>
    <string name="active">Active</string>
    <string name="inactive">InActive</string>
    <string name="title_activity_market_vehicle_request">MarketVehicleRequest</string>
    <string name="vehicle_req">Request Code</string>
    <string name="from_branch">From branch</string>
    <string name="slash"> / </string>
    <string name="to_branch">To branch</string>
    <string name="loading_point">Loading point</string>
    <string name="title_activity_add_vehicle_request">Add Market Vehicle Req.</string>
    <string name="unloading_point">Unloading point</string>
    <string name="requirement_type">Requirement Type</string>
    <string name="touching_point">Touching point</string>
    <string name="goods_type">Good\'s type</string>
    <string name="actual_weight_of_goods">Actual Wt. of Good\'s</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="vehicle_capacity">Vehicle capacity</string>
    <string name="broker_selection">Broker </string>
    <string name="broker_rate">Broker rate</string>
    <string name="advance">Advance</string>
    <string name="broker_code">Broker code</string>
    <string name="req_date">Request date</string>
    <string name="mini_rate">Minimum Rate</string>
    <string name="show">Show</string>
    <string name="title_vehicle_approval">Vehicle Approval</string>
    <string name="approve">Approve</string>
    <string name="title_vehicle_tracking">Vehicle Tracking</string>
    <string name="Vehicle_no">Vehicle No.</string>
    <string name="colon"> : </string>
    <string name="reject">Reject</string>
    <string name="denied">denied</string>
    <string name="id">ID</string>
    <string name="approve_status">Approval Status</string>
    <string name="pushback">Push Back</string>
    <string name="edit">Edit</string>
    <string name="app_version">app_version</string>
    <string name="app_publish">Powered by Axpress Logistics India Pvt Ltd</string>
    <string name="app_all_rights">All rights reserved.</string>
    <string name="reset_password">Reset Password</string>
    <string name="activities">Activities</string>
</resources>