<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_leave_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from"
            android:inputType="date"
            android:focusable="false" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_leave_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to"
            android:inputType="date"
            android:focusable="false"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/Leave_type"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spinner_apply_leave"
            android:layout_width="0dp"
            android:layout_weight=".7"
            android:autoSizeMaxTextSize="8dp"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:entries="@array/leave_arrays"
            android:prompt="@string/visit_for_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/total_leave_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="16dp" />
    </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/editTextReason_of_leave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/leave_reason_edt" />
        </android.support.design.widget.TextInputLayout>
</LinearLayout>