<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.it2.axpresslogisticapp.acitvities.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="32dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher24s" />

        //Employee ID.
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_employee_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/employee_id"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        //Employee name.

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/employee_name"
                android:inputType="textAutoComplete" />
        </android.support.design.widget.TextInputLayout>

        //Employee Gender.

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_gender_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gender"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        //Employee Branch.

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_branch_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/branch"
                android:inputType="textAutoComplete" />
        </android.support.design.widget.TextInputLayout>

        //Employee Designation.

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_destination_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/designation"
                android:inputType="textAutoComplete" />
        </android.support.design.widget.TextInputLayout>

        //Employee Email ID.

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        //Contact No.

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_contact_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_no"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        //Employee Password.

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_password_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
        //Employee ConfrimPassword.
        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginTop="8dp">-->

        <!--<EditText-->
        <!--android:id="@+id/input_confirm_password_id"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/confirm_password"-->
        <!--android:inputType="textPassword"-->
        <!--android:textColor="@color/text_iconColor" />-->
        <!--</android.support.design.widget.TextInputLayout>-->


        //Registration Button

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_registration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_shape"
            android:padding="12dp"
            android:text="@string/submit_btn" />


    </LinearLayout>

</ScrollView>
