<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">
<TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/searchbyname_id"
    android:gravity="center"
    android:textStyle="bold|italic"
    android:textSize="16dp"
    android:layout_marginTop="2dp"/>

    <EditText
        android:id="@+id/input_edit_text_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textAlignment="gravity"
        android:background="@drawable/edittext_shape"
        android:shadowRadius="50"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_shape"
        android:maxLines="1"
        android:padding="12dp"
        android:text="@string/searchbtn" />

    <TextView
        android:visibility="invisible"
        android:id="@+id/employee_not_found_text_Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_not_found"
        android:gravity="center"
        android:textStyle="italic"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="2dp"/>
</LinearLayout>