<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".acitvities.EmployeeLeaveRequestActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_toolbar"/>
    <HorizontalScrollView android:id="@+id/horizontal_scroll_view"
        android:layout_width="wrap_content" android:layout_height="wrap_content"

        android:scrollbars="horizontal">


    <ScrollView android:id="@+id/vertical_scroll_view"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:scrollbars="vertical">
    <TableLayout
        android:id="@+id/tableview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:text="@string/employee_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_column="1" />

            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_column="1" />
            <TextView
                android:text="@string/Leave_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_column="1" />
            <TextView
                android:text="@string/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_column="1" />

            <TextView
                android:text="@string/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_column="1" />
            <TextView
                android:text="@string/days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_column="1" />
            <TextView
                android:text="@string/leave_reason_edt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_column="1" />
            <TextView
                android:text="@string/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_column="1" />
            <TextView
                android:text="@string/remark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_column="1" />
            <TextView
                android:text="@string/submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_column="1" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/text13sp"
                android:background="@drawable/edittext_shape_with_zero_corner"
                android:layout_column="1"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/text13sp"
                android:layout_column="1"
                android:background="@drawable/edittext_shape_with_zero_corner"
                android:editable="false" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/text13sp"
                android:layout_column="1"
                android:background="@drawable/edittext_shape_with_zero_corner"
                android:editable="false"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/text13sp"
                android:layout_column="1"
                android:background="@drawable/edittext_shape_with_zero_corner"
                android:editable="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/text13sp"
                android:layout_column="1"
                android:background="@drawable/edittext_shape_with_zero_corner"
                android:editable="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:editable="false"
                android:textAlignment="center"
                android:background="@drawable/edittext_shape_with_zero_corner"
                android:textSize="14dp" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/text13sp"
                android:background="@drawable/edittext_shape_with_zero_corner"
                android:layout_column="1"
                android:editable="false" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/text13sp"
                android:background="@drawable/edittext_shape_with_zero_corner"
                android:layout_column="1"
                android:editable="false" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/text13sp"
                android:background="@drawable/edittext_shape_with_zero_corner"
                android:layout_column="1"
                android:editable="false" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/btn_enabledColor"
                android:textSize="8dp"
                android:layout_column="1"
                android:editable="false" />
        </TableRow>
    </TableLayout>
    </ScrollView>
    </HorizontalScrollView>
</TableLayout>